<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adapter.TaskAdapterPage">
    <TextView
        android:id="@+id/recycler_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ListView"
        android:gravity="center_horizontal"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_title">
    </android.support.v7.widget.RecyclerView>
</android.support.constraint.ConstraintLayout>